fix:productsのgapを調整

--- a/css/style.css
+++ b/css/style.css
@@ -280,5 +280,7 @@ footer .copyright {
 
   .cat-list {
     grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 24px;
+    row-gap: 33px;
   }
 }
